--- a/style.css
+++ b/style.css
@@ -93,6 +93,18 @@ body{
   color: rgba(255, 255, 255, .4);
 }
 
+.task-item{
+  cursor: pointer;
+  transform: translateX(0);
+  transition: transform 250ms ease;
+}
+
+.task-item:hover{
+  transform: translateX(2px);
+  transform-origin: left;
+}
+
+
 .newtask::placeholder{
   color: rgba(0, 0, 0, .4);
 }
