--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ body{
 .todo-list{
   grid-area: active;
   box-shadow: 3px 3px 10px 10px rgba(0, 0, 0, .05) ;
+  position: relative;
+  height: 100%;
 }
 
 .task-list{
@@ -157,7 +159,7 @@ body{
   font-size: 1.2rem;
   padding: 1em ;
   position :relative;
-  
+  height: 43%;
 }
 
 .task{
